crates/tui/tests/snapshots/snapshot_search_tests__snapshot_search_screen_cursor_at_start.snap
---
source: crates/tui/tests/snapshot_search_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [FOCUS] | [?] Unknown                                     │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│index=main                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────┐
│               No results. Enter a search query and press Enter.              │
│                                                                              │
│                                                                              │
│                                                 ┌──────────────────────────┐ │
│                                                 │ Onboarding [0/5] 0%      │ │
│                                                 │ ○ Create Profile         │ │
│                                                 │ ○ Test Connection        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[FOCUS]  Tab:Next | Shift+Tab:Prev | Ctrl+Tab:Focus | Ctrl+Shift+Tab:Focus | ?│
└──────────────────────────────────────────────────────────────────────────────┘
