crates/tui/tests/snapshots/snapshot_search_tests__snapshot_search_screen_cursor_in_middle.snap
---
source: crates/tui/tests/snapshot_search_tests.rs
assertion_line: 76
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│index=main                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────┐
│               No results. Enter a search query and press Enter.              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Toggle Focus | Shift+Tab:Previous Screen | Enter:Run ...| ?:Help | q:Quit│
└──────────────────────────────────────────────────────────────────────────────┘
