crates/tui/tests/snapshots/snapshot_search_tests__snapshot_search_screen_scrolled.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│index=main                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Search complete: index=main                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────────────────────────┐
│{  "_time": "2024-01-15T10:10:00.000Z",  "level": "ERROR",  "message": "Event │
│{  "_time": "2024-01-15T10:11:00.000Z",  "level": "WARN",  "message": "Event m│
│{  "_time": "2024-01-15T10:12:00.000Z",  "level": "ERROR",  "message": "Event │
│{  "_time": "2024-01-15T10:13:00.000Z",  "level": "WARN",  "message": "Event m│
│{  "_time": "2024-01-15T10:14:00.000Z",  "level": "ERROR",  "message": "Event │
│{  "_time": "2024-01-15T10:15:00.000Z",  "level": "WARN",  "message": "Event m│
│{  "_time": "2024-01-15T10:16:00.000Z",  "level": "ERROR",  "message": "Event │
│{  "_time": "2024-01-15T10:17:00.000Z",  "level": "WARN",  "message": "Event m│
│{  "_time": "2024-01-15T10:18:00.000Z",  "level": "ERROR",  "message": "Event │
│{  "_time": "2024-01-15T10:19:00.000Z",  "level": "WARN",  "message": "Event m│
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health 6:Saved | q:Quit                │
└──────────────────────────────────────────────────────────────────────────────┘
