crates/tui/tests/snapshots/snapshot_search_tests__snapshot_virtual_window_scrolling-2.snap
---
source: crates/tui/tests/snapshot_search_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [FOCUS] | [?] Unknown                                     │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│test query                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results (51-59 / 100 total)───────────────────────────────────────────────────┐
│{                                                                             │
│  "id": 50,                                                                   │
│  "message": "Message 50"                                                     │
│}                                                                             │
│{                                                                             │
│  "id": 51,                                                                   │
│  "message": "Message 51"                                                     │
│}                                                                             │
│{                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[FOCUS]  Tab:Next | Shift+Tab:Prev | Ctrl+Tab:Results  | Esc:Results | Ctrl+Q:│
└──────────────────────────────────────────────────────────────────────────────┘
