crates/tui/tests/snapshots/snapshot_search_tests__snapshot_virtual_window_scrolling-3.snap
---
source: crates/tui/tests/snapshot_search_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search [FOCUS] | [?] Unknown                                     │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│test query                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results (91-99 / 100 total)───────────────────────────────────────────────────┐
│{                                                                             │
│  "id": 90,                                                                   │
│  "message": "Message 90"                                                     │
│}                                                                             │
│{                                                                             │
│  "id": 91,                                                                   │
│  "message": "Message 91"                                                     │
│}                                                                             │
│{                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[FOCUS]  Tab:Next | Shift+Tab:Prev | Ctrl+Tab:Results  | Esc:Results | Ctrl+Q:│
└──────────────────────────────────────────────────────────────────────────────┘
